# ScriptForge

./: .gitignore  LICENSE  README.md  build_exe.py  create_icon_placeholder.py  pyproject.toml  requirements.txt
docs/: USAGE.md
src/regutility/: __init__.py  __main__.py  app.py
src/regutility/core/: __init__.py  backup.py  comparison.py  converter.py  parser.py  ps1_converter.py  registry.py
src/regutility/models/: __init__.py  data.py  enums.py
src/regutility/styles/: __init__.py  themes.py
src/regutility/ui/: __init__.py  backup_tab.py  compare_tab.py  convert_tab.py  main_window.py  ps1_convert_tab.py  widgets.py
src/regutility/utils/: __init__.py  constants.py
tests/: __init__.py
tests/fixtures/: test_sample.reg
