[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regutility"
version = "1.0.0"
description = "A comprehensive Windows Registry comparison and backup utility with a modern GUI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Fausto Yuuki", email = "yuuki_0711@discord"}
]
keywords = ["windows", "registry", "backup", "comparison", "utility", "gui", "pyqt6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "PyQt6>=6.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/YuukiFST/RegUtility"
Repository = "https://github.com/YuukiFST/RegUtility"
Issues = "https://github.com/YuukiFST/RegUtility/issues"

[project.scripts]
regutility = "regutility.app:main"

[project.gui-scripts]
regutility-gui = "regutility.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
